Corrections added to models, views, templates and css

--- a/stqa/templates/stqa/group_login.html
+++ b/stqa/templates/stqa/group_login.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4"></div>
-                <div class="col-md-4">
+                <div class="col-md-4" style="border: 5px solid black;">
                      <center>
                       <h1>GROUP LOGIN</h1>
                     </center>
@@ -39,6 +39,7 @@
                                 </div>
                                 {% endif %}  
 
+                                <div style="margin-top: 50px; margin-bottom: 50px;"></div>
                                 <div class="form-group">
                                   
                                     <label for="inputGroupId">Group-Id</label>
