--- a/stqa/templates/stqa/manager_login.html
+++ b/stqa/templates/stqa/manager_login.html
@@ -27,7 +27,7 @@
          <div class="container">
             <div class="row">
                 <div class="col-md-4"></div>
-                <div class="col-md-4">
+                <div class="col-md-4" style="border: 5px solid black;">
                       <center>
                       <h1>MANAGER LOGIN</h1>
                     </center>
