--- a/stqa/static/stqa/css/styles1.css
+++ b/stqa/static/stqa/css/styles1.css
@@ -3,9 +3,9 @@ header
 	width: 100%;
 	height: 150px;
 	background-size: 100% 100%;
-    border-bottom: 1px solid brown;
-    background-color: brown;
-    color: aqua;
+    border-bottom: 5px solid cornsilk;
+    background-color: black;
+    color: coral;
     font-size: 70px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     display: flex;
@@ -59,7 +59,7 @@ input
 }
 
 
-.list-group
+.list-group, select
 {
     box-shadow: 4px 4px 5px brown;
 }
