--- a/stqa/templates/stqa/add_projects.html
+++ b/stqa/templates/stqa/add_projects.html
@@ -18,7 +18,7 @@
                 <ul class="navbar-nav mr-auto">
                   
                   <li class="nav-item active">
-                    <a class="nav-link" href="{%url 'stqa:group_info'%}">INDEX<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{%url 'stqa:group_info'%}">BACK<span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="{%url 'stqa:group_login'%}">LOG OUT</a>
