--- a/stqa/templates/stqa/group_signup.html
+++ b/stqa/templates/stqa/group_signup.html
@@ -25,7 +25,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3"></div>
-                <div class="col-md-6">
+                <div class="col-md-6" style="border: 5px solid black;">
                         <center>
                         <h1>SIGN-UP</h1>
                       </center>
