--- a/stqa/templates/stqa/index.html
+++ b/stqa/templates/stqa/index.html
@@ -30,10 +30,35 @@
             <!--content-->
             <center>
             <div style="margin-top: 80px; margin-bottom: 20px;">   
-                                
+
+              
           
             </div>
             </center>
+
+            <div class="container">
+              <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                  <div class="jumbotron text-center">
+                    <h1 class="display-4"><b>WELCOME</b></h1>
+                    <p class="lead">This is a simple project submission and review website</p>
+                    <hr class="my-4">
+                    <p>Groups should register themselves at the website and send their Project ideas with description for the manager to review.
+                      Manager will accept or reject the proposed idea.
+                    </p>
+                  </div>
+                </div>
+                <div class="col-md-3"></div>
+              </div>
+            </div>
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
     </body>
 
   
